# Turing_Student_Code_2019

./: .gitignore  2018202136FJQ.txt  README.md
2018202136FJQ/src/: add week_5
2018202184DHX/: web_crawl.cpp
program training/: (Neutralized)main_control.cpp  BM25_valuator.cpp  data.txt  datefield.cpp  datefield.h  document.cpp  document.h  exec  field.cpp  field.h  loaddata.h  main_control.cpp  makefile  numberfield.cpp  numberfield.h  searchengine.cpp  searchengine.h  stringfield.cpp  stringfield.h  valuation.cpp  valuation.h
summer/: README.md
summer/周炎亮_付廷琛_方正杰_高考志愿填报/: a.cpp  dialog.cpp  dialog.h  dialog.ui  dialog1.cpp  dialog1.h  dialog1.ui  dialog2.cpp  dialog2.h  dialog2.ui  dialog3.cpp  dialog3.h  dialog3.ui  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new.txt  score.cpp  score.h  untitled.pro  zjreco.cpp  zjreco.h
summer/张晓康_段华欣_查寒天_“采蜂”古诗文白话翻译系统/: creatKDFile.py  settings.py  similarity.py  urls.py
summer/徐炜_杨铭基_牛子牧_古诗文白话检索系统/: KD_Tree.h  index.html  poem.py  search.cpp
summer/李国祥_胡一华_贺寅烜_我要回家_失踪人口检索系统/: README.md
summer/胡浦云 许益冰 黄浩睿 高考志愿推荐系统/: .gitignore
week_1/: 2018202136FJQ  README.md
week_2/: README.md
week_2/src/: Makefile  (+4 more)
week_3/: README.md
week_3/2018202143HHR/src/: ArgumentParser.cc  ArgumentParser.h  Arguments.cc  Arguments.h  AsyncRequestPool.cc  CMakeLists.txt  Crawler.cc  Crawler.h  StringEx.h  TerminalColor.h  Url.cc  main.cc
week_4/: README
week_5/: README.md
week_5/2018202143HHR/src/: BigInteger.cc  BigInteger.h  CMakeLists.txt  main.cc
week_6/: README.md
week_8/: README.md  readme.md
(+1240 files in other folders)
